--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Your E-Commerce Store</title>
+    <title> E-Store</title>
 </head>
 <body>
     <header>
-        <h1>Your E-Commerce Store</h1>
+        <h1>Your E-Store</h1>
     </header>
     <main>
         <section class="product">
@@ -29,9 +29,7 @@
         <h2>Shopping Cart</h2>
         <ul id="cart"></ul>
 
-    </aside><!-- Add this button within the <body> tag, after the <aside> section -->
-    <!-- <button onclick="checkout()">Checkout</button> -->
-<!-- Add these radio buttons within the <body> tag, after the <aside> section -->
+    </aside>
     <div>
         <input type="radio" id="upi" name="paymentOption" value="upi">
         <label for="upi">UPI</label>
@@ -40,7 +38,7 @@
         <label for="card">Credit/Debit Card</label>
     </div>
     
-    <!-- Add this button within the <body> tag, after the <aside> section -->
+  
         <!-- <button onclick="checkout()">Checkout</button>
     
 
